--- a/Staff/src/main/res/values/strings.xml
+++ b/Staff/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="pembayaran_tagihan">Total Tagihan : Rp %1$s</string>
     <string name="pilih_tanggal_janji">Pilih Tanggal Janji</string>
     <string name="dispensasi_tgl_janji">Tanggal Janji : %1$s</string>
+    <string name="pembayaran_text_detail">Detail Tagihan :</string>
 </resources>
