--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="icon_permohonan_cuti">Icon Permohonan Cuti</string>
     <string name="app_logo">logo app</string>
 
-    <!--    CutiActivity-->
+    <!--    TambahCutiActivity-->
     <string name="form_cuti_title">Formulir Permohonan Cuti</string>
     <string name="cuti_judul">Judul Cuti</string>
     <string name="cuti_keterangan">Keterangan</string>
@@ -39,5 +39,16 @@
     <string name="icon_scan_aset">icon scan aset</string>
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
+    <string name="cuti_judul_view">Judul Cuti: %1$s</string>
+    <string name="cuti_keterangan_view">Keterangan: %1$s</string>
+    <string name="cuti_jenis_view">Jenis: %1$s</string>
+    <string name="cuti_mulai_view">Mulai: %1$s</string>
+    <string name="cuti_sampai_view">Sampai: %1$s</string>
+    <string name="cuti_status_view">Status: %1$s</string>
+    <string name="cuti_revisi_view">Revisi: %1$s</string>
+    <string name="cuti_ditolak_view">Alasan Ditolak: %1$s</string>
+    <string name="list_permohonan_cuti">Daftar Permohonan Cuti</string>
+    <string name="icon_empty">icon empty</string>
+    <string name="tambah_cuti">tambah cuti</string>
 
 </resources>
