feat: - add 10 recent post in main page - add back compatibility in webview

--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -76,5 +76,7 @@
     <string name="siap_ops_gerak">Siap Ops Gerak</string>
     <string name="icon_pengaduan">icon pengaduan</string>
     <string name="pengaduan">Pengaduan</string>
+    <string name="gambar_post">gambar_post</string>
+    <string name="berita_terbaru">Berita Terbaru</string>
 
 </resources>
