feat: finish add adapter for siap ops gerak and component

--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="siap_ops_view">Siap Ops: %1$s</string>
     <string name="siap_gerak_view">Siap Gerak: %1$s</string>
     <string name="siap_kendaraan_text">Kendaraan</string>
+    <string name="siap_kendaraan_list">%1$s: %2$s</string>
 
 </resources>
