--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -95,5 +95,15 @@
     <string name="pengaduan_judul_text">Judul Pengaduan</string>
     <string name="pengaduan_isi_text">Isi Aduan</string>
     <string name="gambar_giat">gambar giat</string>
+    <string name="icon_riwayat_disposisi">icon_riwayat_disposisi</string>
+    <string name="riwayat_disposisi">Riwayat Disposisi</string>
+    <string name="icon_teruskan_surat">icon teruskan surat</string>
+    <string name="teruskan_surat">Teruskan Surat</string>
+    <string name="disposisikan">Disposisikan</string>
+    <string name="icon_disposisi_surat">icon disposisi surat</string>
+    <string name="sm_penerima">Penerima: %1$s</string>
+    <string name="sm_bentuk">Bentuk: %1$s</string>
+    <string name="sm_sumber">Sumber: %1$s</string>
+    <string name="surat_masuk">Surat Masuk</string>
 
 </resources>
