feat: - add riwayat disposisi bottom sheet

--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -102,8 +102,10 @@
     <string name="disposisikan">Disposisikan</string>
     <string name="icon_disposisi_surat">icon disposisi surat</string>
     <string name="sm_penerima">Penerima: %1$s</string>
+    <string name="sm_pengirim">Pengirim: %1$s</string>
     <string name="sm_bentuk">Bentuk: %1$s</string>
     <string name="sm_sumber">Sumber: %1$s</string>
+    <string name="sm_aksi">Aksi: %1$s</string>
     <string name="surat_masuk">Surat Masuk</string>
 
 </resources>
