--- a/Korem/src/main/res/values/strings.xml
+++ b/Korem/src/main/res/values/strings.xml
@@ -107,5 +107,6 @@
     <string name="sm_sumber">Sumber: %1$s</string>
     <string name="sm_aksi">Aksi: %1$s</string>
     <string name="surat_masuk">Surat Masuk</string>
+    <string name="disposisi_catatan">Catatan</string>
 
 </resources>
