feat: - add view log error

--- a/eoffice_korem/src/main/res/values/strings.xml
+++ b/eoffice_korem/src/main/res/values/strings.xml
@@ -132,5 +132,6 @@
     <string name="militer">Militer</string>
     <string name="icon_nonmiliter">icon non militer</string>
     <string name="non_militer">Non Militer</string>
+    <string name="error_logger">Error Log</string>
 
 </resources>
