feat: - change status to 'dibaca' when see image is clicked - add button 'acc' if status 'pengajuan'

--- a/eoffice_korem/src/main/res/values/strings.xml
+++ b/eoffice_korem/src/main/res/values/strings.xml
@@ -137,5 +137,6 @@
     <string name="error_logger">Error Log</string>
     <string name="icon_surat_image">icon gambar isi surat</string>
     <string name="gambar_surat">Lihat Surat</string>
+    <string name="acc_surat">Setujui Surat</string>
 
 </resources>
