feat: - refactor MainActivity2 to MainActivity - move disposisi to activity - add multiple 'penerima'

--- a/eoffice_korem/src/main/res/values/strings.xml
+++ b/eoffice_korem/src/main/res/values/strings.xml
@@ -138,5 +138,6 @@
     <string name="icon_surat_image">icon gambar isi surat</string>
     <string name="gambar_surat">Lihat Surat</string>
     <string name="acc_surat">Setujui Surat</string>
+    <string name="catatan_tambahan">Catatan Tambahan</string>
 
 </resources>
