--- a/eoffice_korem/src/main/res/values/strings.xml
+++ b/eoffice_korem/src/main/res/values/strings.xml
@@ -142,5 +142,6 @@
     <string name="catatan_tambahan">Catatan Tambahan</string>
     <string name="dispo_balas">Balasan Surat</string>
     <string name="balasan">Balasan</string>
+    <string name="login_webapp">Login Web App</string>
 
 </resources>
