--- a/eoffice_korem/src/main/res/values/strings.xml
+++ b/eoffice_korem/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
     <string name="icon_surat_image">icon gambar isi surat</string>
     <string name="gambar_surat">Lihat Surat</string>
     <string name="acc_surat">Setujui Surat</string>
-    <string name="catatan_tambahan">Catatan Tambahan</string>
+    <string name="disposisi">Disposisi</string>
     <string name="dispo_balas">Balasan Surat</string>
     <string name="balasan">Balasan</string>
     <string name="login_webapp">Login Web App</string>
